--- a/b/bu/but/buttinsider.com.html
+++ b/b/bu/but/buttinsider.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the buttinsider.com privacy policy that was archived on 2013-11-09.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131109122836id_/http%3A//www.buttinsider.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the buttinsider.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214095147id_/http%3A//www.buttinsider.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 		<meta charset="utf-8">
@@ -43,7 +43,7 @@
 		<meta name="description" content="Daily updated free porn tube full of exclusive sex videos in many categories. Watch unlimited porno and enjoy biggest HD porn movies database on the internet.">
 		<meta name="keywords" content="free porn videos, free sex movies, porn tube, porno tube, sex tube, free online porn, nude tube, xxx tube, tube, free porn tube, hq tube">
 		<title>HD Anal Movies, Free Butt Sex Tube, Online Porno Vids, Streaming Porn Clips and Free XXX Videos</title>
-				<link href="http://diz.buttinsider.com/css/style.211.css" rel="stylesheet" type="text/css">
+				<link href="http://dizcdn.buttinsider.com/css/style.css?93" rel="stylesheet" type="text/css">
 		<link rel="canonical" href="http://www.buttinsider.com/privacy.html">
 		<script type="text/javascript">
 
@@ -61,7 +61,7 @@
 		</script>
 			</head>
 	<body>
-						<script src="http://diz.buttinsider.com/js/pops2.295.js" type="text/javascript"></script>
+						<script src="http://dizcdn.buttinsider.com/js/pops2.js?25" type="text/javascript"></script>
 					
 			<div class="wrap">
 			<div class="header">
@@ -84,7 +84,7 @@
 									<li><a href="/category/amateur/" title="Amateur Porn">Amateur</a></li><li><a href="/category/anal/" title="Anal Sex">Anal</a></li><li><a href="/category/anime/" title="Anime Porn">Anime</a></li><li><a href="/category/asian/" title="Asian Porn">Asian</a></li><li><a href="/category/ass/" title="Nice Ass">Ass</a></li><li><a href="/category/asslicking/" title="Ass Licking">Ass Licking</a></li><li><a href="/category/athletics/" title="Athletic Girls">Athletics</a></li><li><a href="/category/babe/" title="Hot Babes">Babe</a></li><li><a href="/category/ballbusting/" title="Ballbusting">Ball Busting</a></li><li><a href="/category/bbw/" title="BBW Porn">BBW</a></li><li><a href="/category/bdsm/" title="BDSM Porn">BDSM</a></li><li><a href="/category/bigdicks/" title="Big Dicks">Big Dicks</a></li><li><a href="/category/bigtits/" title="Big Tits">Big Tits</a></li><li><a href="/category/bisexual/" title="Bisexual Porn">Bisexual</a></li><li><a href="/category/bizarre/" title="Bizarre Sex">Bizarre</a></li><li><a href="/category/blackebony/" title="Black Porn">Black</a></li><li><a href="/category/blonde/" title="Hot Blondes">Blonde</a></li><li><a href="/category/blowjob/" title="Blowjob">Blowjob</a></li><li><a href="/category/bondage/" title="Bondage Sex">Bondage</a></li></ul><ul><li><a href="/category/brunette/" title="Hot Brunette">Brunette</a></li><li><a href="/category/cartoon/" title="Cartoon Porn">Cartoon</a></li><li><a href="/category/celebs/" title="Nude Celebs">Celebrities</a></li><li><a href="/category/cfnm/" title="CFNM Videos">CFNM</a></li><li><a href="/category/closeup/" title="Close Up Pussy">Close-up</a></li><li><a href="/category/collegesex/" title="College Sex">College Sex</a></li><li><a href="/category/comics/" title="Sex Comics">Comics</a></li><li><a href="/category/creampie/" title="Creampie">Creampie</a></li><li><a href="/category/crossdress/" title="Crossdress">Crossdress</a></li><li><a href="/category/cumshot/" title="Cumshot">Cumshot</a></li><li><a href="/category/dp/" title="DP Porn">DP</a></li><li><a href="/category/drunkgirls/" title="Drunk Girls">Drunk Girls</a></li><li><a href="/category/emo/" title="Emo Porn">Emo</a></li><li><a href="/category/european/" title="Euro Porn">European</a></li><li><a href="/category/exgf/" title="Ex GF">Ex GF</a></li><li><a href="/category/facesitting/" title="Facesitting">Face Sitting</a></li><li><a href="/category/fat/" title="Fat Ass">Fat</a></li><li><a href="/category/femdom/" title="Femdom">Femdom</a></li><li><a href="/category/fetish/" title="Fetish Porn">Fetish</a></li></ul><ul><li><a href="/category/ffm/" title="FFM Sex">FFM</a></li><li><a href="/category/fisting/" title="Fisting">Fisting</a></li><li><a href="/category/footfetish/" title="Foot Fetish">Foot Fetish</a></li><li><a href="/category/fuckingmachines/" title="Fucking Machines">Fuck Machine</a></li><li><a href="/category/gangbang/" title="Gang Bang">Gangbang</a></li><li><a href="/category/gay/" title="Gay Sex">Gay</a></li><li><a href="/category/glamour/" title="Glamour Girls">Glamour</a></li><li><a href="/category/gloryhole/" title="Glory Hole">Glory Hole</a></li><li><a href="/category/granny/" title="Granny Sex">Granny</a></li><li><a href="/category/groupsex/" title="Group Sex">Group Sex</a></li><li><a href="/category/hairy/" title="Hairy Pussy">Hairy</a></li><li><a href="/category/handjob/" title="Handjob">Handjob</a></li><li><a href="/category/hardcore/" title="Hardcore Sex">Hardcore</a></li><li><a href="/category/hentai/" title="Hentai">Hentai</a></li><li><a href="/category/3dhentai/" title="3D Hentai">Hentai 3D</a></li><li><a href="/category/homemade/" title="Homemade Porn">Homemade</a></li><li><a href="/category/indian/" title="Indian Porn">Indian</a></li><li><a href="/category/interracial/" title="Interracial Sex">Interracial</a></li><li><a href="/category/latex/" title="Latex Fetish">Latex</a></li></ul><ul><li><a href="/category/latina/" title="Latina Porn">Latina</a></li><li><a href="/category/lesbians/" title="Lesbian Sex">Lesbians</a></li><li><a href="/category/massage/" title="massage">Massage</a></li><li><a href="/category/masturbation/" title="Masturbation">Masturbation</a></li><li><a href="/category/mature/" title="Mature Porn">Mature</a></li><li><a href="/category/milf/" title="Milf Sex">MILF</a></li><li><a href="/category/nursesex/" title="Nurse Sex">Nurse Sex</a></li><li><a href="/category/officesex/" title="Office Sex">Office Sex</a></li><li><a href="/category/oldandyoung/" title="Old Young Sex">Old and Young</a></li><li><a href="/category/orgy/" title="Orgy">Orgy</a></li><li><a href="/category/outdoor/" title="Outdoor Sex">Outdoor</a></li><li><a href="/category/panties/" title="Wet Panties">Panties</a></li><li><a href="/category/pissing/" title="Pissing">Pissing</a></li><li><a href="/category/pornstars/" title="Pornstars">Pornstars</a></li><li><a href="/category/pov/" title="POV Porn">POV</a></li><li><a href="/category/pregnant/" title="Pregnant Sex">Pregnant</a></li><li><a href="/category/public/" title="Public Sex">Public</a></li><li><a href="/category/pussy/" title="Pussy">Pussy</a></li><li><a href="/category/redhead/" title="Hot Red Head">Redhead</a></li></ul><ul><li><a href="/category/schoolgirls/" title="Young School Girls">Schoolgirls</a></li><li><a href="/category/sexparty/" title="Sex Party">Sex Party</a></li><li><a href="/category/shemale/" title="Shemale Sex">Shemale</a></li><li><a href="/category/shower/" title="Shower Sex">Shower</a></li><li><a href="/category/sleepingsex/" title="Sleeping Sex">Sleeping Sex</a></li><li><a href="/category/smalltits/" title="Small Tits">Small Tits</a></li><li><a href="/category/smoking/" title="">Smoking</a></li><li><a href="/category/softcore/" title="Softcore">Softcore</a></li><li><a href="/category/spanking/" title="Spanking">Spanking</a></li><li><a href="/category/squirting/" title="Squirting Pussy">Squirting</a></li><li><a href="/category/stockings/" title="Stocking Sex">Stockings</a></li><li><a href="/category/strapon/" title="Strapon Sex">Strapon</a></li><li><a href="/category/teens/" title="Teen Sex">Teens</a></li><li><a href="/category/toys/" title="Dildo Sex">Toys</a></li><li><a href="/category/uniform/" title="Uniform Sex">Uniform</a></li><li><a href="/category/upskirt/" title="Upskirt">Upskirt</a></li><li><a href="/category/vintage/" title="Vintage Porn">Vintage</a></li><li><a href="/category/voyeur/" title="Private Voyeur Sex">Voyeur</a></li><li><a href="/category/wifefuck/" title="Wifes Home Movies">Wife fuck</a></li>								</ul>
 							</div>
 						</li>
-												<li class="menu-item"><a href="http://www.ixxx.com/?t=180" title="Free Porn Movies" target="_blank">Free Porn Movies</a></li>
+																		<li class="menu-item"><a href="http://www.ixxx.com/?t=180" title="Free Porn Movies" target="_blank">Free Porn Movies</a></li>
 					</ul>
 					<div class="search">
 						<form action="" method="post">
@@ -150,17 +150,10 @@
 	
 </div>
 <div class="banners ">
-		<div class="banners-iframe">
-		<div class="banner">
-			<div>
-				<iframe src="http://ads2.contentabc.com/ads?pi=127&amp;psi=212" width="300" height="250" scrolling="no" frameborder="0" allowtransparency="true" marginwidth="0" marginheight="0"></iframe>
-			</div>
-		</div>
-	</div>
-	<iframe id="right-banners-main" src="http://diz.buttinsider.com/rec/right_1.html?1" scrolling="no" frameborder="0" allowtransparency="true" marginheight="0" marginwidth="0"></iframe>
+		<iframe id="right-banners-main" src="http://dizcdn.buttinsider.com/rec/right_1.html?2" scrolling="no" frameborder="0" allowtransparency="true" marginheight="0" marginwidth="0"></iframe>
 </div>
 					<div class="banners-horizontal">
-	<iframe id="footer-banners-main" src="http://diz.buttinsider.com/rec/foot_1.html" scrolling="no" frameborder="0" allowtransparency="true" marginheight="0" marginwidth="0"></iframe>
+	<iframe id="footer-banners-main" src="http://dizcdn.buttinsider.com/rec/foot_1.html" scrolling="no" frameborder="0" allowtransparency="true" marginheight="0" marginwidth="0"></iframe>
 	</div>				</div>
 			</div>
 		</div>
@@ -178,19 +171,19 @@
 			<div><a href="http://www.fapxxx.com" title="Porn Movies" target="_blank">Porn Movies</a></div>
 		</div>
 			<div class="inner">
-				<p>All rights reserved © 2013, Buttinsider.com</p>
+				<p>All rights reserved © 2014, Buttinsider.com</p>
 				<ul>
-					<li><a href="/terms.html" rel="nofollow" target="_blank" title="View our Terms of Use">Terms of Use</a></li>
-					<li><a href="/privacy.html" rel="nofollow" target="_blank" title="View our Privacy Policy">Privacy Policy</a></li>
-					<li><a href="/dmca.html" rel="nofollow" target="_blank" title="View DMCA">DMCA</a></li>
-					<li><a href="/2257.html" rel="nofollow" target="_blank" title="View 18 USC 2257 Statement">2257 Statement</a></li>
-					<li><a href="http://partners.buttinsider.com/" rel="nofollow" target="_blank" title="View our webmasters page">Webmasters</a></li>
-					<li><a href="/advertise.html" rel="nofollow" target="_blank" title="View our advertising page">Advertise</a></li>
+					<li><a href="/terms.html" rel="nofollow" target="_blank" title="View our Terms of Use" class="dtnoppu">Terms of Use</a></li>
+					<li><a href="/privacy.html" rel="nofollow" target="_blank" title="View our Privacy Policy" class="dtnoppu">Privacy Policy</a></li>
+					<li><a href="/dmca.html" rel="nofollow" target="_blank" title="View DMCA" class="dtnoppu">DMCA</a></li>
+					<li><a href="/2257.html" rel="nofollow" target="_blank" title="View 18 USC 2257 Statement" class="dtnoppu">2257 Statement</a></li>
+					<li><a href="http://partners.buttinsider.com/" rel="nofollow" target="_blank" title="View our webmasters page" class="dtnoppu">Webmasters</a></li>
+					<li><a href="/advertise.html" rel="nofollow" target="_blank" title="View our advertising page" class="dtnoppu">Advertise</a></li>
 				</ul>
 			</div>
 		</div>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js" type="text/javascript"></script>
-				<script src="http://diz.buttinsider.com/js/ui.js" type="text/javascript"></script>
+				<script src="http://dizcdn.buttinsider.com/js/ui.js" type="text/javascript"></script>
 		
 					
 			
