--- a/a/ar/art/article-voip.com.html
+++ b/a/ar/art/article-voip.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the article-voip.com privacy policy that was archived on 2010-12-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20101222205705id_/http%3A//www.article-voip.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the article-voip.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214100122id_/http%3A//www.article-voip.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 <meta http-equiv="Content-Language" content="en-us">
@@ -22,10 +22,8 @@
 </tr>
 
 <tr>
-<form name="search" method="post" action="http://www.article-voip.com/indexser.php"></form>
-<td class="topnav" colspan="2">Search:
-<input type="text" name="search" value="" size="31" class="search"></td>
-
+<td class="topnav" colspan="2"><form name="search" method="post" action="http://www.article-voip.com/indexser.php">Search:
+<input type="text" name="search" value="" size="31" class="search"></form></td>
 </tr>
 
 <tr>
@@ -41,7 +39,7 @@
 
 <p><strong>How we gather information from users</strong></p>
 
-<p>How we collect and store information depends on the page you are visiting, the activities in which you elect to participate and the services provided. For example, you may be asked to provide information when you register for access to certain portions of our site or request certain features, such as newsletters or when you make a purchase. You may provide information when you participate in sweepstakes and contests, message boards and chat rooms, and other interactive areas of our site. Like most Web sites, Article-Voip.com also collects information automatically and through the use of electronic tools that may be transparent to our visitors. For example, we may log the name of your Internet Service Provider or use cookie technology to recognize you and hold information from your visit. Among other things, the cookie may store your user name and password, sparing you from having to re-enter that information each time you visit, or may control the number of times you encounter a particular advertisement while visiting our site. As we adopt additional technology, we may also gather information through other means. In certain cases, you can choose not to provide us with information, for example by setting your browser to refuse to accept cookies, but if you do you may be unable to access certain portions of the site or may be asked to re-enter your user name and password, and we may not be able to customize the site's features according to your preferences.</p>
+<p>How we collect and store information depends on the page you are visiting, the activities in which you elect to participate and the services provided. For example, you may be asked to provide information when you register for access to certain portions of our site or request certain features, such as newsletters or when you make a purchase. You may provide information when you participate in sweepstakes and contests, message boards and chat rooms, and other interactive areas of our site. Like most Web sites, Article-Voip.com also collects information automatically and through the use of electronic tools that may be transparent to our visitors. For example, we may log the name of your Internet Service Provider or use cookie technology to recognize you and hold information from your visit. Among other things, the cookie may store your user name and password, sparing you from having to re-enter that information each time you visit, or may control the number of times you encounter a particular advertisement while visiting our site. As we adopt additional technology, we may also gather information through other means. In certain cases, you can choose not to provide us with information, for example by setting your browser to refuse to accept cookies, but if you do you may be unable to access certain portions of the site or may be asked to re-enter your user name and password, and we may not be able to customize the sites features according to your preferences.</p>
 
 <p><strong>What we do with the information we collect</strong></p>
 
@@ -103,19 +101,14 @@
 <div class="spacer"></div>
 <div class="rightnavbox">
 <script type="text/javascript"><!--
-google_ad_client = "pub-1512223214951152";
+google_ad_client = "ca-pub-9399062947761720";
+/* 160x600 article-voip */
+google_ad_slot = "5794291099";
 google_ad_width = 160;
 google_ad_height = 600;
-google_ad_format = "160x600_as";
-google_ad_type = "text";
-google_ad_channel ="";
-google_color_border = "FFFFFF";
-google_color_bg = "FFFFFF";
-google_color_link = "0000FF";
-google_color_text = "858585";
-google_color_url = "0000FF";
-//--></script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+//-->
+</script>
+<script type="text/javascript" src="//pagead2.googlesyndication.com/pagead/show_ads.js">
 </script>
 </div>
 
@@ -125,12 +118,14 @@ google_color_url = "0000FF";
 <br><br><br>
 
 <script type="text/javascript"><!--
-document.write("<img src='http://counter.yadro.ru/hit?r"+
+document.write("<img src=\"http://counter.yadro.ru/hit?r"+
 escape(document.referrer)+((typeof(screen)=="undefined")?"":
 ";s"+screen.width+"*"+screen.height+"*"+(screen.colorDepth?
 screen.colorDepth:screen.pixelDepth))+";u"+escape(document.URL)+
 ";"+Math.random()+
-"' width=1 height=1 alt=''>")//--></script><img src="http://counter.yadro.ru/hit?r;s800*600*24;uhttps%3A//web.archive.org/web/20101222205705id_/http%253A//www.article-voip.com/privacy.php;0.7080278070511963" width="1" height="1" alt="">
+"\" width=1 height=1 alt=\"\">")
+//-->
+</script><img src="http://counter.yadro.ru/hit?r;s800*600*24;uhttps%3A//web.archive.org/web/20140214100122id_/http%253A//www.article-voip.com/privacy.php;0.8229408541327448" width="1" height="1" alt="">
 <a href="/use.php?link=live" rel="nofollow"><img src="http://counter.yadro.ru/logo?26.1" title="" alt="" border="0" width="88" height="15"></a>
 </div>
 
@@ -145,9 +140,4 @@ screen.colorDepth:screen.pixelDepth))+";u"+escape(document.URL)+
 
 
 
-
-<p align="center"><font face="Verdana" size="1">Powered by <a href="http://www.articledashboard.com">Article Dashboard</a></font></p><font face="Verdana" size="1">
-
-
-
-</font></body></html>
+</body></html>
