--- a/g/gr/gro/growthink.com.html
+++ b/g/gr/gro/growthink.com.html
@@ -1,7 +1,10 @@
-<!--The following is the downloaded HTML source of the growthink.com privacy policy that was archived on 2013-10-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131017114725id_/http%3A//www.growthink.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the growthink.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214100303id_/http%3A//www.growthink.com/privacy-policy) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en" class=" wf-loading"><head>
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en" class=" wf-loading"><head><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" async="" src="https://tag.perfectaudience.com/serve/51a669e5bcc11f9b1100002d.js"></script><script src="//dev.visualwebsiteoptimizer.com/j.php?a=7607&amp;u=https%3A%2F%2Fweb.archive.org%2Fweb%2F20140214100303id_%2Fhttp%253A%2F%2Fwww.growthink.com%2Fprivacy-policy&amp;r=0.42470546667136677" type="text/javascript"></script><script async="true" type="text/javascript" src="https://s.adroll.com/j/roundtrip.js"></script></head><body class="page not-view">x
+
+
+
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <link href="https://plus.google.com/103977933787705520877" rel="publisher">
@@ -12,13 +15,14 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="description" content="Last Updated 1/25/2012 We recognize that privacy is an important issue, so we design and operate our services with the protection of your privacy in mind. This Privacy Policy outlines our policies and procedures we utilize to safeguard your personal information.  Data collection">
 <link rel="shortcut icon" href="/sites/all/themes/growthink2/favicon.ico" type="image/x-icon">
-  <link type="text/css" rel="stylesheet" media="all" href="/files/css/css_ff82fbfcc040db7b91df3e1e38f97038.css">
-  <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" async="" src="https://tag.perfectaudience.com/serve/51a669e5bcc11f9b1100002d.js"></script><script src="//use.typekit.net/sag2jze.js" type="text/javascript" async=""></script><script type="text/javascript" src="/files/js/js_158eafd255d35ea933cf1b1ece216086.jsmin.js"></script>
+  <link type="text/css" rel="stylesheet" media="all" href="/files/css/css_6c00e537372b28e19990167feab48aa5.css">
+  <script src="//use.typekit.net/sag2jze.js" type="text/javascript" async=""></script><script type="text/javascript" src="/files/js/js_cb3dcea52439b873007960a35c67f30c.jsmin.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
 jQuery.extend(Drupal.settings, { "basePath": "/", "googleanalytics": { "trackOutgoing": 1, "trackMailto": 1, "trackDownload": 1, "trackDownloadExtensions": "7z|aac|arc|arj|asf|asx|avi|bin|csv|doc|exe|flv|gif|gz|gzip|hqx|jar|jpe?g|js|mp(2|3|4|e?g)|mov(ie)?|msi|msp|pdf|phps|png|ppt|qtm?|ra(m|r)?|sea|sit|tar|tgz|torrent|txt|wav|wma|wmv|wpd|xls|xml|z|zip" } });
 //--><!]]>
 </script>
+	<script type="text/javascript" src="/dynamicPhone/jquery.ba-replacetext.min.js"></script>
   <link rel="stylesheet" href="/mobile.css" type="text/css" media="handheld">    
 
 <script type="text/javascript">
@@ -60,7 +64,8 @@ jQuery.extend(Drupal.settings, { "basePath": "/", "googleanalytics": { "trackOut
     <style type="text/css">
   	#topdvdr0 {display: none;}
   	#topdvdr0 {display: none;}
-  	
+
+
   </style>
 
 <!-- Start Visual Website Optimizer Asynchronous Code -->
@@ -72,12 +77,12 @@ library_tolerance=1500,
 use_existing_jquery=false,
 // DO NOT EDIT BELOW THIS LINE
 f=false,d=document;return{use_existing_jquery:function(){return use_existing_jquery;},library_tolerance:function(){return library_tolerance;},finish:function(){if(!f){f=true;var a=d.getElementById('_vis_opt_path_hides');if(a)a.parentNode.removeChild(a);}},finished:function(){return f;},load:function(a){var b=d.createElement('script');b.src=a;b.type='text/javascript';b.innerText;b.onerror=function(){_vwo_code.finish();};d.getElementsByTagName('head')[0].appendChild(b);},init:function(){settings_timer=setTimeout('_vwo_code.finish()',settings_tolerance);this.load('//dev.visualwebsiteoptimizer.com/j.php?a='+account_id+'&u='+encodeURIComponent(d.URL)+'&r='+Math.random());var a=d.createElement('style'),b='body{opacity:0 !important;filter:alpha(opacity=0) !important;background:none !important;}',h=d.getElementsByTagName('head')[0];a.setAttribute('id','_vis_opt_path_hides');a.setAttribute('type','text/css');if(a.styleSheet)a.styleSheet.cssText=b;else a.appendChild(d.createTextNode(b));h.appendChild(a);return settings_timer;}};}());_vwo_settings_timer=_vwo_code.init();
-</script><script src="//dev.visualwebsiteoptimizer.com/j.php?a=7607&amp;u=https%3A%2F%2Fweb.archive.org%2Fweb%2F20131017114725id_%2Fhttp%253A%2F%2Fwww.growthink.com%2Fprivacy-policy&amp;r=0.8256187034613971" type="text/javascript"></script>
+</script>
 <!-- End Visual Website Optimizer Asynchronous Code -->
 
 
-<script async="true" type="text/javascript" src="https://s.adroll.com/j/roundtrip.js"></script></head>
-<body class="page not-view">
+
+
 
 <div id="div_services" style="display:none; position:absolute; width:250px; z-index:1000">
   <ul>
@@ -98,7 +103,7 @@ f=false,d=document;return{use_existing_jquery:function(){return use_existing_jqu
   <div style="float:left; width:55%;"><a href="/"><img alt="Growthink Business Plans, Strategy Consulting, Investment Banking" src="/sites/all/themes/growthink2/images/logo.gif"></a></div>
   <div style="float:right; width:25%; text-align:right;">
 
-	<p style="font-size:20px;line-height:20px;padding:15px 0px;color:#F7F7F5;">
+	<p id="callus" style="font-size:20px;line-height:20px;padding:15px 0px;color:#F7F7F5;">
 		Call Toll Free: 800-506-5728
 	</p>
 
@@ -191,7 +196,7 @@ advertisements about goods and services of interest to you. If you would like mo
       <a href="/meeting" style="padding-left:8px; padding-right:8px" rel="nofollow">Meet Now!</a> |
       <a href="/employment" style="padding-left:8px; padding-right:8px" rel="nofollow">Careers</a> |
       <a href="/affiliate-program" style="padding-left:8px; padding-right:8px" rel="nofollow">Affiliates</a>          </div>
-    <div class="copyright">Copyright © Growthink Inc., 2013</div>
+    <div class="copyright">Copyright © Growthink Inc., 2014</div>
       <div class="block block-block" id="block-block-79">
         <div class="content"><style type="text/css">#block-block-79{display:none;}</style>
 <script type="text/javascript">
@@ -212,7 +217,10 @@ if(typeof tabletURL !== 'undefined' || typeof mobileURL !== 'undefined'){
 </script></div>
  </div>
   <div class="block block-block" id="block-block-80">
-        <div class="content"><script type="text/javascript">
+        <div class="content"><style type="text/css">
+#block-block-80{display:none;}
+</style>
+<script type="text/javascript">
   (function() {
     window._pa = window._pa || {};
     // _pa.orderId = "myCustomer@email.com"; // OPTIONAL: attach user email or order ID to conversions
@@ -224,11 +232,59 @@ if(typeof tabletURL !== 'undefined' || typeof mobileURL !== 'undefined'){
 </script></div>
  </div>
   <div class="block block-block" id="block-block-82">
-        <div class="content"><script src="http://www1.moon-ray.com/v2.4/analytics/tracking.js" type="text/javascript"></script>
+        <div class="content"><style type="text/css">
+#block-block-82{display:none;}
+</style>
+<script src="http://www1.moon-ray.com/v2.4/analytics/tracking.js" type="text/javascript"></script>
 <script>
 _mri = "11490_2_2";
 mrtracking();
 </script></div>
+ </div>
+  <div class="block block-block" id="block-block-83">
+        <div class="content"><style type="text/css">
+#block-block-83{display:none;}
+</style>
+<script type="text/javascript">
+function createCookie(name,value,days) {
+	if (days) {
+		var date = new Date();
+		date.setTime(date.getTime()+(days*24*60*60*1000));
+		var expires = "; expires="+date.toGMTString();
+	}
+	else var expires = "";
+	document.cookie = name+"="+value+expires+"; path=/";
+}
+
+function readCookie(name) {
+	var nameEQ = name + "=";
+	var ca = document.cookie.split(';');
+	for(var i=0;i < ca.length;i++) {
+		var c = ca[i];
+		while (c.charAt(0)==' ') c = c.substring(1,c.length);
+		if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length,c.length);
+	}
+	return null;
+}
+
+$(document).ready(function(){
+
+if("true"=="false"){
+  createCookie('gclid','true','365');
+}
+
+if(readCookie('gclid') == 'true' || "true"=="false"){
+  //if cookie is set
+  $("body *").replaceText(/1?[-. ]?\(?800\)?[-. ]?506[-. ]{1}5728/gi, "800-216-3710" );
+}
+
+});
+</script></div>
+ </div>
+  <div class="block block-block" id="block-block-84">
+        <div class="content"><style type="text/css">
+.page #header,.blog #header{background:url("/files/resources/15-anniversary-logo.png") no-repeat scroll 490px 4px}
+</style></div>
  </div>
 </div>
 
