--- a/b/bo/box/boxofads.com.html
+++ b/b/bo/box/boxofads.com.html
@@ -1,18 +1,19 @@
-<!--The following is the downloaded HTML source of the boxofads.com privacy policy that was archived on 2013-12-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131219111823id_/http%3A//www.boxofads.com/pp.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the boxofads.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214104839id_/https%3A//www.boxofads.com/pp.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html class="no-js" lang="en"><head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <link rel="icon" type="image/ico" href="images/favicon.ico">
+  <meta property="fb:admins" content="100007593966653">
+  <link rel="icon" type="image/ico" href="https://www.boxofads.com/images/favicon.ico">
   <title>BoxofAds - Privacy Policy</title>
   <meta name="description" content="">
-  <link rel="stylesheet" href="css/main.css?version=1.7">
-  <link rel="stylesheet" href="css/fonts.css">
-  <script type="text/javascript" async="" src="//commondatastorage.googleapis.com/code.snapengage.com/js/94086d59-0253-4ef1-8205-efdb46a29876.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" async="" src="https://cdn.mxpnl.com/libs/mixpanel-2.2.min.js"></script><script src="js/jquery.min.js"></script>
+  <link rel="stylesheet" href="https://www.boxofads.com/css/main.css?version=2.2">
+  <link rel="stylesheet" href="https://www.boxofads.com/css/fonts.css">
+  <script type="text/javascript" async="" src="//commondatastorage.googleapis.com/code.snapengage.com/js/94086d59-0253-4ef1-8205-efdb46a29876.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" async="" src="https://cdn.mxpnl.com/libs/mixpanel-2.2.min.js"></script><script src="https://www.boxofads.com/js/jquery.min.js"></script>
   <!-- shiv -->
   <!--[if lt IE 9]>
-  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+  <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
     <!-- start Mixpanel -->
 	<script type="text/javascript">(function(e,b){if(!b.__SV){var a,f,i,g;window.mixpanel=b;a=e.createElement("script");a.type="text/javascript";a.async=!0;a.src=("https:"===e.location.protocol?"https:":"http:")+'//cdn.mxpnl.com/libs/mixpanel-2.2.min.js';f=e.getElementsByTagName("script")[0];f.parentNode.insertBefore(a,f);b._i=[];b.init=function(a,e,d){function f(b,h){var a=h.split(".");2==a.length&&(b=b[a[0]],h=a[1]);b[h]=function(){b.push([h].concat(Array.prototype.slice.call(arguments,0)))}}var c=b;"undefined"!==
@@ -20,20 +21,21 @@
 	b._i.push([a,e,d])};b.__SV=1.2}})(document,window.mixpanel||[]);
 	mixpanel.init("ea6dcddac64aa75180954b1497829825");</script>
 	<!-- end Mixpanel -->
+	<script type="text/javascript" src="https://www.boxofads.com/js/cookies.js"></script>
 </head>
 
 <body>
 	<header>
 		<div id="login-section">
-			<form action="http://www.boxofads.com/member/login.php" method="post">
+			<form action="https://www.boxofads.com/member/login.php" method="post">
 				<input type="text" name="user" placeholder="login or e-mail" required="required">
 				<input name="pass" type="password" placeholder="password" required="required">
 				<input class="login-button" type="submit" value="Login" name="login">
-				<a href="http://www.boxofads.com/member/login.php?forgot" target="_blank" class="forgot">Forgot password?</a>
+				<a href="https://www.boxofads.com/member/login.php?forgot" target="_blank" class="forgot">Forgot password?</a>
 			</form>
 		</div>
 		<div class="content">
-			<a class="logo" href="index.php"><img src="images/white_logo.png" alt="PPV Spy"></a>
+			<a class="logo" href="https://www.boxofads.com/index.php"><img src="https://www.boxofads.com/images/white_logo.png" alt="PPV Spy"></a>
 		
 			<div class="right">			
 				<a class="login-button" href="" id="activate-login">Login</a>
@@ -41,17 +43,17 @@
 			</div>
 			
 			<nav>
-				<a href="" id="activate-features">features &amp; benefits<span class="arrow"></span></a>				<a href="pricing.php">pricing</a>				<a href="contact.php">contact</a>				<a href="http://www.boxofads.com/blog/" target="_blank">blog</a>
+				<a href="" id="activate-features">features &amp; benefits<span class="arrow"></span></a>				<a href="https://www.boxofads.com/pricing.php">pricing</a>				<a href="https://www.boxofads.com/contact.php">contact</a>				<a href="http://www.boxofads.com/blog/" target="_blank">blog</a>
 			</nav>
 		</div>
 		
 		<div id="features-nav">
 			<div class="content">
-				<a href="ppv-spy-tool.php">PPV</a>				<a href="display-spy-tool.php" class="last">DISPLAY</a>			</div>
+				<a href="https://www.boxofads.com/ppv-spy-tool.php">PPV</a>				<a href="https://www.boxofads.com/display-spy-tool.php" class="last">DISPLAY</a>			</div>
 		</div>		
 	</header>
 	
-	<div class="Privacy Policy Privacy Policy-split2"><div class="termsofservice content">
+	<div class="Privacy Policy Privacy Policy-split"><div class="termsofservice content">
 	<h1><strong>BoxOfAds.com</strong> Privacy Policy</h1>
 	
 	<h2>1 Introduction</h2>
@@ -227,11 +229,11 @@
 	<div class="content">
 		<div class="copyright">© 2013, BoxOfAds.com All Rights Reserved.</div>
 		<nav>
-			<a href="ppv-spy-tool.php" target="_blank">Features &amp; benefits</a>|
-			<a href="pricing.php" target="_blank">Pricing</a>|
-			<a href="contact.php" target="_blank">Contact</a>|
-			<a href="terms.php" target="_blank">Terms of Service</a>|
-			<a href="pp.php" target="_blank">Privacy Policy</a>
+			<a href="https://www.boxofads.com/ppv-spy-tool.php" target="_blank">Features &amp; benefits</a>|
+			<a href="https://www.boxofads.com/pricing.php" target="_blank">Pricing</a>|
+			<a href="https://www.boxofads.com/contact.php" target="_blank">Contact</a>|
+			<a href="https://www.boxofads.com/terms.php" target="_blank">Terms of Service</a>|
+			<a href="https://www.boxofads.com/pp.php" target="_blank">Privacy Policy</a>
 		</nav>
 	</div>
 </footer>
@@ -244,9 +246,9 @@
 	var subscription = 'none';
 </script>
 
-<script src="js/animations.js"></script>
-<script src="js/parallax.js"></script>
-<script src="js/slider.js"></script>
+<script src="https://www.boxofads.com/js/animations.js"></script>
+<script src="https://www.boxofads.com/js/parallax.js"></script>
+<script src="https://www.boxofads.com/js/slider.js"></script>
 <!-- Google Code for Remarketing Tag -->
 <!--------------------------------------------------
 Remarketing tags may not be associated with personally identifiable information or placed on pages related to sensitive categories. See more information and instructions on how to setup the tag on: http://google.com/ads/remarketingsetup
